fuzz: simplify single-session fuzzer and add issue artifact support